# AndFix

./: README.md  build.gradle  local.properties
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeCache.txt  CMakeLists.txt  andfix.cpp  common.h
jni/art/: art.h  art_4_4.h  art_5_0.h  art_5_1.h  art_6_0.h  art_7_0.h  art_method_replace.cpp  art_method_replace_4_4.cpp  art_method_replace_5_0.cpp  art_method_replace_5_1.cpp  art_method_replace_6_0.cpp  art_method_replace_7_0.cpp
jni/dalvik/: dalvik.h  dalvik_method_replace.cpp
samples/AndFixDemo/src/com/euler/andfix/: MainActivity.java  MainApplication.java
samples/AndFixDemo/src/com/euler/test/: A.java  F.java  Fix.java  O.java
src/com/alipay/euler/andfix/: AndFix.java  AndFixManager.java  Compat.java
src/com/alipay/euler/andfix/annotation/: MethodReplace.java
src/com/alipay/euler/andfix/patch/: Patch.java  PatchManager.java
src/com/alipay/euler/andfix/security/: SecurityChecker.java
src/com/alipay/euler/andfix/util/: FileUtil.java
